# fastapi-keycloak

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: .env.example  config.py  controller.py  main.py  models.py  service.py
